--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -7,87 +7,88 @@
         android:id="@+id/headerview"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp">
-        <include layout="@layout/header_layout"/>
+
+        <include layout="@layout/header_layout" />
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/activity_chat_msg_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/_5sdp"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/activity_chat_msg_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/_5sdp" />
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        android:orientation="horizontal"
-        android:weightSum="2"
-        android:layout_margin="@dimen/_8sdp"
-        android:background="@drawable/roundborder_whitebg"
-        >
-
-        <EditText
-            android:id="@+id/activity_chat_msg_edmsg"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.9"
-            android:textSize="@dimen/_13sdp"
-            android:gravity="center|left"
-            android:scrollbars="none"
-            android:background="@android:color/transparent"
-            android:layout_marginLeft="@dimen/_18sdp"
-            android:hint="@string/writemessage"
-            />
-
-        <TextView
-            android:id="@+id/activity_chat_txtsend"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:text="send"
-            android:paddingLeft="@dimen/_5sdp"
-            android:layout_marginRight="@dimen/_15sdp"
-            android:visibility="gone"
-            android:textSize="@dimen/_14sdp"
-            android:textColor="@color/choosefile"
-            android:gravity="center" />
-
         <LinearLayout
-            android:id="@+id/activity_chat_layoutattachment"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
+            android:layout_margin="@dimen/_8sdp"
+            android:background="@drawable/roundborder_whitebg"
             android:orientation="horizontal"
-            android:layout_weight="0.1"
-            android:weightSum="1"
-            android:layout_marginRight="@dimen/_8sdp">
+            android:weightSum="2">
 
-        <ImageView
-            android:id="@+id/activity_chat_imggallery"
-            android:layout_width="@dimen/_35sdp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_gravity="center"
-            android:layout_weight="0.5"
-            android:padding="@dimen/_5sdp"
-            android:src="@mipmap/ic_gallery" />
+            <EditText
+                android:id="@+id/activity_chat_msg_edmsg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/_18sdp"
+                android:layout_weight="1.9"
+                android:background="@android:color/transparent"
+                android:gravity="center|left"
+                android:hint="@string/writemessage"
+                android:scrollbars="none"
+                android:textSize="@dimen/_13sdp" />
 
-          <ImageView
-            android:id="@+id/activity_chat_imglike"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-              android:padding="@dimen/_10sdp"
-              android:layout_weight="0.5"
-            android:src="@mipmap/ic_blackheart" />
-</LinearLayout>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/activity_chat_txtsend"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginRight="@dimen/_15sdp"
+                android:gravity="center"
+                android:paddingLeft="@dimen/_5sdp"
+                android:text="send"
+                android:textColor="@color/choosefile"
+                android:textSize="@dimen/_14sdp"
+                android:visibility="gone" />
+
+            <LinearLayout
+                android:id="@+id/activity_chat_layoutattachment"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_marginRight="@dimen/_8sdp"
+                android:layout_weight="0.1"
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <ImageView
+                    android:id="@+id/activity_chat_imggallery"
+                    android:layout_width="@dimen/_35sdp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_weight="0.5"
+                    android:padding="@dimen/_5sdp"
+                    android:src="@mipmap/ic_gallery" />
+
+                <ImageView
+                    android:id="@+id/activity_chat_imglike"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="0.5"
+                    android:visibility="gone"
+                    android:padding="@dimen/_10sdp"
+                    android:src="@mipmap/ic_blackheart" />
+            </LinearLayout>
+        </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
