--- a/app/src/main/res/layout/adapter_comment_people_list.xml
+++ b/app/src/main/res/layout/adapter_comment_people_list.xml
@@ -53,7 +53,7 @@
 
             <TextView
                 android:id="@+id/adapter_comment_people_list_txtcomment"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="@string/home_comment"
