--- a/app/src/main/res/layout/adapter_contacts_list.xml
+++ b/app/src/main/res/layout/adapter_contacts_list.xml
@@ -25,22 +25,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="left"
-                android:layout_weight="1.2"
+                android:layout_weight="1.1"
                 android:gravity="center|left"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="@dimen/_60sdp"
+                    android:layout_width="@dimen/_90sdp"
                     android:layout_height="@dimen/_70sdp"
-                    android:background="@drawable/ic_profileiconsmall_bg"
+                    android:background="@mipmap/ic_daberny_mainicon"
                     android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/adapter_people_list_imgprofilepic"
                         android:layout_width="@dimen/_50sdp"
                         android:layout_height="@dimen/_42sdp"
-                        android:layout_marginLeft="@dimen/_10sdp"
-                        android:layout_marginTop="@dimen/_25sdp"
+                        android:layout_marginLeft="@dimen/_30sdp"
+                        android:layout_marginTop="@dimen/_24sdp"
                         android:src="@drawable/ic_placeholder" />
                 </LinearLayout>
             </LinearLayout>
@@ -79,7 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center|right"
-                android:layout_weight="1.1"
+                android:layout_weight="1.2"
                 android:gravity="center|right"
                 android:orientation="vertical">
 
@@ -91,6 +91,7 @@
                     android:background="@drawable/follow_bg"
                     android:gravity="center"
                     android:padding="@dimen/_10sdp"
+                    android:visibility="gone"
                     android:text="@string/follow"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_11sdp" />
