--- a/app/src/main/res/layout/adapter_notification_list.xml
+++ b/app/src/main/res/layout/adapter_notification_list.xml
@@ -7,31 +7,47 @@
     <LinearLayout
         android:id="@+id/adapter_notification_list_layout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        android:orientation="horizontal"
-        android:background="@color/home_bg"
-        android:weightSum="2">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/adapter_notification_list_imgprofilepic"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
-            android:text="@string/notification"
             android:gravity="center|left"
             android:padding="@dimen/_2sdp"
-            android:layout_weight="1.7"
-            android:src="@drawable/ic_placeholder"/>
+            android:src="@drawable/ic_placeholder"
+            android:text="@string/notification" />
 
-        <TextView
-            android:id="@+id/adapter_notification_list_txtnotification"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_40sdp"
-            android:text="@string/notification"
-            android:layout_weight="0.3"
-            android:gravity="center|left"
-            android:paddingLeft="@dimen/_15sdp"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_12sdp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_gravity="center|left"
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/adapter_notification_list_txtnotification"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center|left"
+                android:paddingLeft="@dimen/_10sdp"
+                android:text="@string/notification"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_11sdp" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/adapter_notification_list_imgpostpic"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:padding="@dimen/_3sdp"
+            android:gravity="right"
+            android:visibility="gone"
+            android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_placeholder" />
     </LinearLayout>
 </LinearLayout>
