--- a/app/src/main/res/layout/footer.xml
+++ b/app/src/main/res/layout/footer.xml
@@ -66,12 +66,16 @@
                 android:layout_alignRight="@id/relative_layout"
                 android:background="@drawable/item_count_num"
                 android:text=" "
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:gravity="center"
-                android:layout_gravity="center"
+                android:gravity="center|top"
+                android:layout_marginLeft="@dimen/_15sdp"
+                android:layout_marginRight="@dimen/_15sdp"
+                android:layout_marginBottom="@dimen/_24sdp"
+                android:layout_gravity="center|top"
                 android:visibility="visible"
                 android:textColor="@color/signinbg"
-                android:textSize="@dimen/_10sdp" />
+                android:textSize="@dimen/_7sdp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
         </RelativeLayout>
 
         <ImageView
