--- a/app/src/main/res/layout/fragment_comment_peopledetail.xml
+++ b/app/src/main/res/layout/fragment_comment_peopledetail.xml
@@ -8,18 +8,56 @@
         android:id="@+id/headerview_edit"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp">
-       <include layout="@layout/header_layout" />
+
+        <include layout="@layout/header_layout" />
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/fragment_comment_recyclerpeoplelist"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_5sdp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_5sdp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_1sdp"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <EditText
+                android:id="@+id/fragment_comment_peopledetails_edcomment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.3"
+                android:background="@drawable/loginborder"
+                android:gravity="center|left"
+                android:hint="@string/home_write_comment"
+                android:padding="@dimen/_5sdp"
+                android:textSize="@dimen/_12sdp" />
+
+            <ImageView
+                android:id="@+id/fragment_comment_peopledetails_imgcomment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="left"
+                android:layout_weight="1.7"
+                android:gravity="left"
+                android:src="@mipmap/ic_comment_send" />
+
+        </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
 
