--- a/app/src/main/res/layout/fragment_searchchatuser.xml
+++ b/app/src/main/res/layout/fragment_searchchatuser.xml
@@ -7,10 +7,11 @@
     <RelativeLayout
         android:id="@+id/headerview"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        >
-        <include layout="@layout/header_layout"/>
+        android:layout_height="@dimen/_40sdp">
+
+        <include layout="@layout/header_layout" />
     </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/_60sdp">
@@ -26,29 +27,28 @@
                 android:id="@+id/fragment_home_txtsearch"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.7"
-                android:text="@string/to"
                 android:layout_gravity="center"
+                android:layout_weight="1.7"
                 android:gravity="center"
-                android:textColor="@color/logintext"
                 android:padding="@dimen/_5sdp"
-               />
+                android:text="@string/to"
+                android:textColor="@color/logintext" />
 
             <EditText
                 android:id="@+id/fragment_searchdata_edsearch"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="@string/search"
+                android:layout_weight="0.3"
                 android:background="@android:color/transparent"
-                android:textSize="@dimen/_12sdp"
-                android:layout_weight="0.3" />
+                android:hint="@string/search"
+                android:textSize="@dimen/_12sdp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/_5sdp"
             android:layout_height="match_parent"
-            android:layout_below="@+id/fragment_home_serachlayout">
+            android:layout_below="@+id/fragment_home_serachlayout"
+            android:layout_marginTop="@dimen/_5sdp">
 
             <View
                 android:layout_width="match_parent"
@@ -68,9 +68,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/fragment_search_recyclerpeoplelist"
             android:layout_width="match_parent"
-            android:layout_margin="@dimen/_5sdp"
-            android:layout_height="fill_parent">
-        </android.support.v7.widget.RecyclerView>
+            android:layout_height="fill_parent"
+            android:layout_margin="@dimen/_5sdp"></android.support.v7.widget.RecyclerView>
 
     </RelativeLayout>
 </LinearLayout>
